<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CameraMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="action_addCamera">添加摄像机</string>
    <string name="hello_world">Hello world!</string>
    <string name="auto_wifi_add_device_failed">添加失败，请重试</string>
    <string name="but_up">向上</string>
    <string name="but_down">向下</string>
    <string name="but_left">向左</string>
    <string name="but_right">向右</string>
    
    <string name="but_up_left">上左</string>
    <string name="but_up_right">上右</string>
    <string name="but_down_left">下左</string>
    <string name="but_down_right">下右</string>
    
    <string name="but_amplification">放大</string>
    <string name="but_shrink">缩小</string>
    <string name="but_capture">抓图</string>
	<string name="but_auto">自动</string>
	<string name="but_record">录像</string>
	<string name="but_shutDown">关机</string>
	<string name="but_reboot">重启</string>
	<string name="monitor_ip">ip：	</string>
	<string name="monitor_port">端口号：</string>
	<string name="monitor_username">用户名：</string>
	<string name="monitor_password">密码：   </string>
	<string name="monitor_input">请输入：</string>
	<string name="determine">确定</string>
</resources>
