<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/monitor_ip"
            android:textSize="20dp"/>
        <EditText 
            android:id="@+id/monitor_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:inputType="date"
            android:hint="@string/monitor_input"/>
    </LinearLayout>
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/monitor_port"
            android:textSize="20dp"/>
        <EditText 
            android:id="@+id/monitor_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="2.0"
            android:hint="@string/monitor_input"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/monitor_username"
            android:textSize="20dp"/>
        <EditText 
            android:id="@+id/monitor_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:hint="@string/monitor_input"/>
    </LinearLayout>
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/monitor_password"
            android:textSize="20dp"/>
        <EditText 
            android:id="@+id/monitor_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:hint="@string/monitor_input"/>
    </LinearLayout>
    <Button 
        android:id="@+id/monitor_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/determine"
        android:textSize="20dp"
        android:layout_gravity="center"/>
</LinearLayout>
